depends_compile_tests/tests/fail/derive/graph/multiple_labels_classes.stderr
error: Multiple values for `label` and `class` on edges to node: {("AnotherLabel", Some("CommentTracker")), ("TrackCommentPostIds", Some("CommentTracker"))}.
  --> tests/fail/derive/graph/multiple_labels_classes.rs:12:9
   |
12 |         comments_posts [label="CommentsPosts"];
   |         ^^^^^^^^^^^^^^

error: Multiple values for `label` and `class` on edges to node: {("TrackCommentPostIds", Some("AnotherClass")), ("TrackCommentPostIds", Some("CommentTracker"))}.
  --> tests/fail/derive/graph/multiple_labels_classes.rs:27:9
   |
27 |         comments_posts [label="CommentsPosts"];
   |         ^^^^^^^^^^^^^^
